# rag-from-scratch

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: architecture_case_study.txt  design_principles.txt  passive_cooling.txt
src/: main.py
src/chunking/: chunker.py  chunking.py
src/embedding/: embedder.py  embedding.py
src/llm/: llm.py
src/loaders/: document.py  loader.py  tempCodeRunnerFile.py
src/prompts/: prompt_builder.py
src/rag/: pipeline.py
src/retrieval/: retreiver.py
