[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "numpy>=2.5.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
